Setup per Github Actions e Github Pages

--- a/src/src/components/Navbar.astro
+++ b/src/src/components/Navbar.astro
@@ -14,9 +14,7 @@ import Icon from "./Icon.astro";
 		<Icon name="navigation-menu" />
 	</button>
 	<nav class="nav-links" id="main-menu" aria-expanded="false">
-		<a href="/#about">Chi siamo</a>
-		<a href="/#services">Cosa facciamo</a>
-		<a href="/#contact">Contatti</a>
+		<a href="/il-progetto">Il progetto</a>
 	</nav>
 </header>
 
