--- a/src/src/components/Navbar.astro
+++ b/src/src/components/Navbar.astro
@@ -24,15 +24,15 @@ import Icon from "./Icon.astro";
 		display: grid;
 		grid-template: "logo expander" auto / auto 1fr;
 		align-items: center;
+		padding: .5rem 1rem;
 	}
 
 	.logo {
 		grid-area: logo;
 		font-weight: 700;
-		font-size: 1.5rem;
-		font-variant: small-caps;
-		font-variant-caps: all-petite-caps;
-		padding: 0.5rem 1rem;
+		font-size: 2rem;
+		font-variant-caps: petite-caps;
+		padding: 0;
 		color: var(--color-primary);
 		background-color: var(--color-light);
 	}
@@ -51,6 +51,7 @@ import Icon from "./Icon.astro";
 		border-radius: 0.25rem;
 		background: none;
 		cursor: pointer;
+		font-size: 1rem;
 
 		&:hover,
 		&:focus {
