--- a/src/src/assets/fonts.css
+++ b/src/src/assets/fonts.css
@@ -99,3 +99,18 @@
     font-weight: 400;
     font-style: normal;
 }
+
+/* Alte Haas Grotesk */
+@font-face {
+    font-family: 'Alte Haas Grotesk';
+    src: url('./fonts/AlteHaasGrotesk-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Alte Haas Grotesk';
+    src: url('./fonts/AlteHaasGrotesk-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
