--- a/src/src/pages/index.astro
+++ b/src/src/pages/index.astro
@@ -1,15 +1,23 @@
 ---
+import Image from 'astro/components/Image.astro';
 import Layout from '../layouts/Layout.astro';
+import imgVisitaAnfiteatro from '../assets/images/visita-anfiteatro.png';
 ---
 
 <Layout>
 	<section class="hero">
-		<h2>Vercelli è seduta su un tesoro,<br />ma continua a ignorarlo.</h2>
-		<p>
-			<em>La Rete</em> è un progetto condiviso per restituire dignità alla nostra storia, 
-			celebrare le radici, costruire il futuro.
-		</p>
-		<a href="/il-progetto" class="btn btn-primary">Scopri di più</a>
+		<header class="hero-title">
+			<h2 class="hero-title-text">Vercelli è seduta su un tesoro,<br />ma continua a ignorarlo.</h2>
+		</header>
+		<main class="hero-text">
+			<p>
+				<em>La Rete</em> è un progetto condiviso per restituire dignità alla nostra storia, 
+				celebrare le radici, costruire il futuro.
+			</p>
+		</main>
+		<nav class="hero-call-to-action">
+			<p><a href="/il-progetto" class="btn btn-primary">Scopri di più</a></p>
+		</nav>
 	</section>
 
 	<section id="introduction">
@@ -50,3 +58,107 @@ import Layout from '../layouts/Layout.astro';
 		<a href="#contact" class="btn btn-primary">Contattaci</a>
 	</section>
 </Layout>
+
+<style>
+	@keyframes hero-bg {
+		0%, 100% {
+			background-position: left center;
+		}
+		50% {
+			background-position: right center;
+		}
+	}
+
+	section.hero {
+		position: relative;
+		max-width: 100%;
+		display: grid;
+		grid-template: "title" auto "text" auto "cta" auto / auto;
+		gap: 1rem;
+		align-items: end;
+		padding: 2rem;
+		background-image: url('../assets/images/visita-anfiteatro.png');
+		background-size: cover;
+		animation: hero-bg 240s ease-in-out infinite;
+
+		&::before {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			height: 14em;
+			background: linear-gradient(to top, hsla(13, 5%, 5%, .6) 0%, hsla(13, 4%, 7%, .4) 75%, hsla(13, 3%, 8%, 0) 100%);
+			z-index: 0;
+		}
+
+		.hero-title {
+			grid-area: title;
+			color: var(--color-light);
+			font-weight: bold;
+			z-index: 1;
+			
+			.hero-title-text {
+				//font-size: 2.5rem;
+				//font-family: var(--font-ss);
+				font-weight: normal;
+			}
+		}
+		
+		.hero-text {
+			grid-area: text;
+			color: var(--color-grey-light);
+			font-family: var(--font-ss);
+			font-weight: normal;
+			max-width: 20em;
+			z-index: 1;
+		}
+
+		.hero-call-to-action {
+			grid-area: cta;
+			z-index: 1;
+		}
+	}
+
+	#introduction {
+		font-size: 1.5rem;
+		font-family: var(--font-cursive);
+		font-weight: normal;
+		margin: 4rem 0;
+		color: var(--color-grey-darker);
+	}
+
+	#activities {
+		ul {
+			list-style-type: none;
+			padding-left: 0;
+			color: var(--color-grey-darker);
+			display: grid;
+			grid-template: auto / auto;
+			gap: 4rem;
+			
+			@media (min-width: 600px) {
+				grid-template: auto / auto auto auto;
+			}
+
+			li {
+				padding: 1rem;
+			}
+		}
+	}
+
+	#join-us {
+		text-align: center;
+		margin: 4rem 0;
+		padding: 2rem 0;
+		border: 1px solid var(--color-primary);
+		border-width: 2px 0;
+		border-image: linear-gradient(to right, transparent 0%, var(--color-primary) 50%, transparent 100%);
+
+		p {
+			font-size: 1.25rem;
+			margin-bottom: 1rem;
+			color: var(--color-grey-darker);
+		}
+	}
+</style>
