Fix link, menu navigazione

--- a/src/src/components/Navbar.astro
+++ b/src/src/components/Navbar.astro
@@ -73,6 +73,7 @@ import withBase from "../utils/withBase";
 		width: 100%;
 		background-color: var(--color-grey-lighter);
 		box-shadow: 0 .125rem .5rem rgba(0,0,0,.1);
+		z-index: 1;
 
 		grid-area: nav;
 		display: flex;
