--- a/src/src/pages/index.astro
+++ b/src/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Image from 'astro/components/Image.astro';
 import Layout from '../layouts/Layout.astro';
 import imgVisitaAnfiteatro from '../assets/images/visita-anfiteatro.png';
+import withBase from '../utils/withBase';
 ---
 
 <Layout>
@@ -16,7 +17,7 @@ import imgVisitaAnfiteatro from '../assets/images/visita-anfiteatro.png';
 			</p>
 		</main>
 		<nav class="hero-call-to-action">
-			<p><a href="/il-progetto" class="btn btn-primary">Scopri di più</a></p>
+			<p><a href={withBase('/il-progetto')} class="btn btn-primary">Scopri di più</a></p>
 		</nav>
 	</section>
 
