--- a/src/src/pages/il-progetto.astro
+++ b/src/src/pages/il-progetto.astro
@@ -20,7 +20,9 @@ import Layout from "../layouts/Layout.astro";
 	<p>"La Rete" è aperta a chiunque voglia dare una mano.</p>
 	<p>Il nostro Comune non ha mai avuto una politica per i beni culturali, per salvare e valorizzare il tesoro su cui siamo letteralmente seduti.</p>
 	<p>Bisogna cambiare. E questa è una buona occasione.</p>
-	<p>Ai vercellesi chiediamo aiuto.</p>
-	<p><strong>Non c'è cultura, non c'è futuro per una comunità che distrugge la propria storia</strong>. 
-		Noi vogliamo salvarla perché sono le nostre radici, ma anche perché ritrovare quel tesoro è un ottimo investimento anche economico. Si chiama <strong>turismo</strong>.</p>
+	<p>
+		<strong>Non c'è cultura, non c'è futuro per una comunità che distrugge la propria storia</strong>. 
+		Noi vogliamo salvarla perché sono le nostre radici, ma anche perché ritrovare quel tesoro è un ottimo investimento anche economico. 
+		Si chiama <strong>turismo</strong>.
+	</p>
 </Layout>
