--- a/src/src/layouts/Layout.scss
+++ b/src/src/layouts/Layout.scss
@@ -68,12 +68,21 @@ html,
 body {
 	margin: 0;
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	font-family: var(--font-body);
 	font-weight: 400;
 	font-size: 18px;
 	line-height: 1.4;
 	color: var(--color-dark);
+	background-color: var(--color-light);
+}
+
+html {
+	scroll-behavior: smooth;
+	//background-color: var(--color-grey-lighter);
+}
+
+body {
 	background-color: var(--color-light);
 }
 
