--- a/src/src/components/Navbar.astro
+++ b/src/src/components/Navbar.astro
@@ -16,6 +16,7 @@ import withBase from "../utils/withBase";
 	</button>
 		<nav class="nav-links" id="main-menu" aria-expanded="false">
 			<a href={withBase('/il-progetto')}>Il progetto</a>
+			<a href={withBase('/l-associazione')}>L'associazione</a>
 		</nav>
 </header>
 
