--- a/src/src/pages/l-associazione.astro
+++ b/src/src/pages/l-associazione.astro
@@ -70,8 +70,44 @@ import Layout from "../layouts/Layout.astro";
 	</p>
 
 	<h3>Documenti dell'associazione</h3>
-	<ul>
-		<li>Dati amministrativi</li>
-		<li>Statuto</li>
+	<ul class="documents">
+		<li>Dati amministrativi <a href="/public/docs/dati-amministrativi-la-rete.pdf" target="_blank"><Icon name="download" /></a></li>
+		<li>Statuto <a href="/public/docs/statuto-la-rete.pdf" target="_blank"><Icon name="download" /></a></li>
 	</ul>
 </Layout>
+
+<style>
+	dl {
+		display: flex;
+		flex-direction: column;
+
+		dt {
+			font-weight: 700;
+			margin-top: 1rem;
+		}
+
+		dd {
+			margin: 0;
+			margin-left: 1rem;
+			
+			a {
+				margin-left: 0.5rem;
+				color: var(--color-primary);
+			}
+		}
+	}
+
+	ul.documents {
+		list-style: none;
+		padding: 0;
+
+		li {
+			margin-bottom: 0.5rem;
+
+			a {
+				margin-left: 0.5rem;
+				color: var(--color-primary);
+			}
+		}
+	}
+</style>
