--- a/src/src/layouts/Layout.astro
+++ b/src/src/layouts/Layout.astro
@@ -67,7 +67,8 @@ const currentYear = new Date().getFullYear();
 		text-align: center;
 		border-top: 1px solid var(--color-grey-light);
 		margin-top: 2rem;
-		background-color: var(--color-lightest);
+		background-color: var(--color-primary);
+		color: var(--color-light);
 		display: grid;
 		grid-template: 
 			"header contacts" auto
@@ -90,7 +91,7 @@ const currentYear = new Date().getFullYear();
 			& > .subtitle {
 				font-size: 0.875rem;
 				font-style: italic;
-				color: var(--color-grey);
+				color: var(--color-grey-lighter);
 			}
 		}
 
