Aggiunte pagine Vercellesi nel Mondo (sottopagine ancora mancanti) e Capsula del Tempo

--- a/src/src/layouts/Layout.astro
+++ b/src/src/layouts/Layout.astro
@@ -55,6 +55,7 @@ const currentYear = new Date().getFullYear();
 
 	body > main {
 		grid-area: main;
+		width: 100%;
 		padding: 1rem;
 		margin: 0 auto;
 	}
