--- a/src/src/components/Navbar.astro
+++ b/src/src/components/Navbar.astro
@@ -17,6 +17,8 @@ import withBase from "../utils/withBase";
 		<nav class="nav-links" id="main-menu" aria-expanded="false">
 			<a href={withBase('/il-progetto')}>Il progetto</a>
 			<a href={withBase('/l-associazione')}>L'associazione</a>
+			<a href={withBase('/vercellesi-nel-mondo')}>Vercellesi nel Mondo</a>
+			<a href={withBase('/capsula-del-tempo')}>Capsula del Tempo</a>
 		</nav>
 </header>
 
@@ -74,7 +76,7 @@ import withBase from "../utils/withBase";
 		width: 100%;
 		background-color: var(--color-grey-lighter);
 		box-shadow: 0 .125rem .5rem rgba(0,0,0,.1);
-		z-index: 1;
+		z-index: 100;
 
 		grid-area: nav;
 		display: flex;
