Layout generale, definita collezione per Vercellesi nel mondo, pagina Documenti-VNM

--- a/src/src/components/Navbar.astro
+++ b/src/src/components/Navbar.astro
@@ -38,7 +38,7 @@ import withBase from "../utils/withBase";
 		font-variant-caps: petite-caps;
 		padding: 0;
 		color: var(--color-primary);
-		background-color: var(--color-light);
+		//background-color: var(--color-light);
 	}
 
 	[data-button="expander"] {
