--- a/src/src/layouts/Layout.scss
+++ b/src/src/layouts/Layout.scss
@@ -57,6 +57,7 @@ h1, h2, h3, h4, h5, h6 {
 	--color-grey: hsl(13, 5%, 60%);
 	--color-grey-light: hsl(13, 3%, 80%);
 	--color-grey-lighter: hsl(13, 1%, 90%);
+	--color-grey-lightest: hsl(13, 0%, 95%);
 	--color-light: hsl(13, 5%, 98%);
 	--color-primary-lighter: hsl(13, 60%, 60%);
 	--color-primary-light: hsl(13, 65%, 50%);
@@ -74,16 +75,16 @@ body {
 	font-size: 18px;
 	line-height: 1.4;
 	color: var(--color-dark);
-	background-color: var(--color-light);
 }
 
 html {
 	scroll-behavior: smooth;
-	//background-color: var(--color-grey-lighter);
+	background-color: var(--color-grey-lightest);
+	background-image: url('/src/assets/images/background.svg');
 }
 
 body {
-	background-color: var(--color-light);
+	//background-color: var(--color-light);
 }
 
 /* Heading styles */
@@ -128,10 +129,10 @@ a {
 
 .btn {
 	display: inline-block;
-	padding: 0.5em 1em;
+	padding: 0.5rem 1rem;
 	background-color: var(--color-grey-light);
 	border: none;
-	border-radius: 4px;
+	border-radius: .25rem;
 	cursor: pointer;
 	transition: background-color 0.3s;
 	font-family: var(--font-cursive);
@@ -148,4 +149,22 @@ a {
 			background-color: var(--color-primary-dark);
 		}
 	}
+
+	&.btn-ghost {
+		background-color: transparent;
+		border: .125rem solid var(--color-primary);
+		color: var(--color-primary);
+
+		&:hover {
+			background-color: var(--color-primary);
+			color: var(--color-light);
+		}
+	}
+}
+
+.card {
+	background-color: var(--color-light);
+	padding: 2rem;
+	border: .0625rem solid var(--color-grey-lighter);
+	border-radius: .25rem;
 }
