Caricati file; corretti percorsi download

--- a/src/src/pages/l-associazione.astro
+++ b/src/src/pages/l-associazione.astro
@@ -71,8 +71,8 @@ import Layout from "../layouts/Layout.astro";
 
 	<h3>Documenti dell'associazione</h3>
 	<ul class="documents">
-		<li>Dati amministrativi <a href="/public/docs/dati-amministrativi-la-rete.pdf" target="_blank"><Icon name="download" /></a></li>
-		<li>Statuto <a href="/public/docs/statuto-la-rete.pdf" target="_blank"><Icon name="download" /></a></li>
+		<li>Dati amministrativi <a href="/docs/dati-amministrativi-la-rete.pdf" target="_blank"><Icon name="download" /></a></li>
+		<li>Statuto <a href="/docs/statuto-la-rete.pdf" target="_blank"><Icon name="download" /></a></li>
 	</ul>
 </Layout>
 
