Sezione DVD - Pagine e contenuti

--- a/src/src/components/Navbar.astro
+++ b/src/src/components/Navbar.astro
@@ -17,6 +17,7 @@ import withBase from "../utils/withBase";
 		<nav class="nav-links" id="main-menu" aria-expanded="false">
 			<a href={withBase('/il-progetto')}>Il progetto</a>
 			<a href={withBase('/l-associazione')}>L'associazione</a>
+			<a href={withBase('/dvd')}>Documentari in DVD</a>
 			<a href={withBase('/vercellesi-nel-mondo')}>Vercellesi nel Mondo</a>
 			<a href={withBase('/capsula-del-tempo')}>Capsula del Tempo</a>
 		</nav>
