--- a/src/src/layouts/Layout.astro
+++ b/src/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ import "./Layout.scss";
 import Navbar from "../components/Navbar.astro";
 import "../assets/fonts.css";
 import Icon from "../components/Icon.astro";
-import { withBase } from '../utils/withBase';
+import withBase from '../utils/withBase';
 
 const currentYear = new Date().getFullYear();
 
