--- a/src/src/pages/index.astro
+++ b/src/src/pages/index.astro
@@ -5,7 +5,7 @@ import imgVisitaAnfiteatro from '../assets/images/visita-anfiteatro.png';
 import withBase from '../utils/withBase';
 ---
 
-<Layout>
+<Layout noBreadcrumbs>
 	<section class="hero">
 		<header class="hero-title">
 			<h2 class="hero-title-text">Vercelli è seduta su un tesoro,<br />ma continua a ignorarlo.</h2>
