--- a/src/src/layouts/Layout.astro
+++ b/src/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { breadcrumbs, noBreadcrumbs = false } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="it">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
