--- a/src/src/layouts/Layout.astro
+++ b/src/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { breadcrumbs, noBreadcrumbs = false } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>La Rete - Vercelli</title>
-		<script type="text/javascript" src="https://embeds.iubenda.com/widgets/14a8fe40-e5fd-49f5-a561-89e62e227a78.js"></script>	</head>
+	</head>
 	<body>
 		<Navbar />
 		<main>
@@ -56,6 +56,8 @@ const { breadcrumbs, noBreadcrumbs = false } = Astro.props;
 			</div>
 			<div class="copyright">© La Rete 2013&mdash;{currentYear}</div>
 		</footer>
+		<script type="text/javascript" src="https://embeds.iubenda.com/widgets/14a8fe40-e5fd-49f5-a561-89e62e227a78.js"></script>
+		<script data-goatcounter="https://simonesaviolo.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 	</body>
 </html>
 
