--- a/src/src/layouts/Layout.astro
+++ b/src/src/layouts/Layout.astro
@@ -57,7 +57,7 @@ const { breadcrumbs, noBreadcrumbs = false } = Astro.props;
 			<div class="copyright">© La Rete 2013&mdash;{currentYear}</div>
 		</footer>
 		<script type="text/javascript" src="https://embeds.iubenda.com/widgets/14a8fe40-e5fd-49f5-a561-89e62e227a78.js"></script>
-		<script data-goatcounter="https://simonesaviolo.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+		<script data-goatcounter="https://laretevercelli.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 	</body>
 </html>
 
