In ricordo di Marco Reis

--- a/src/src/components/Navbar.astro
+++ b/src/src/components/Navbar.astro
@@ -20,6 +20,7 @@ import withBase from "../utils/withBase";
 			<a href={withBase('/dvd')}>Documentari in DVD</a>
 			<a href={withBase('/vercellesi-nel-mondo')}>Vercellesi nel Mondo</a>
 			<a href={withBase('/capsula-del-tempo')}>Capsula del Tempo</a>
+			<a href={withBase('/in-ricordo-di-marco')}>In ricordo di Marco</a>
 		</nav>
 </header>
 
