Pagina Contatti, fix grafici

--- a/src/src/components/Navbar.astro
+++ b/src/src/components/Navbar.astro
@@ -5,7 +5,7 @@ import withBase from "../utils/withBase";
 
 <header>
 	<div class="logo">
-		<a href={withBase('/')}>La Rete</a>
+		<a href={withBase('/')} class="no-color">La Rete</a>
 	</div>
 	<button 
 		type="button" class="btn btn-invisible" 
@@ -21,6 +21,7 @@ import withBase from "../utils/withBase";
 			<a href={withBase('/vercellesi-nel-mondo')}>Vercellesi nel Mondo</a>
 			<a href={withBase('/capsula-del-tempo')}>Capsula del Tempo</a>
 			<a href={withBase('/in-ricordo-di-marco')}>In ricordo di Marco</a>
+			<a href={withBase('/contattaci')}>Contattaci</a>
 		</nav>
 </header>
 
