--- a/src/src/layouts/Layout.astro
+++ b/src/src/layouts/Layout.astro
@@ -43,17 +43,17 @@ const includeGoatCounter = import.meta.env.INCLUDE_GOATCOUNTER === 'true';
 				<div class="subtitle">Associazione culturale</div>
 			</header>
 			<div class="contacts">
-				<a href="https://www.facebook.com/laretevercelli"><Icon name="facebook" /></a>
-				<a href="https://www.instagram.com/larete.vercelli"><Icon name="instagram" /></a>
-				<a href="mailto:grandevercelli@gmail.com"><Icon name="ui-email" /></a>
+				<a href="https://www.facebook.com/laretevercelli" class="no-color"><Icon name="facebook" /></a>
+				<a href="https://www.instagram.com/larete.vercelli" class="no-color"><Icon name="instagram" /></a>
+				<a href="mailto:grandevercelli@gmail.com" class="no-color"><Icon name="ui-email" /></a>
 			</div>
 			<div class="legals">
 				<a href="https://www.iubenda.com/privacy-policy/43817366" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
 				<a href="https://www.iubenda.com/privacy-policy/43817366/cookie-policy" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe " title="Cookie Policy ">Cookie Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
 			</div>
 			<div class="credits">
-				<Icon name="code" /> <a href="https://www.linkedin.com/in/simonesaviolo/">Simone Saviolo</a>
-				<Icon name="plugin" /> <a href="https://astro.build/">Astro</a>
+				<Icon name="code" /> <a href="https://www.linkedin.com/in/simonesaviolo/" class="no-color">Simone Saviolo</a>
+				<Icon name="plugin" /> <a href="https://astro.build/" class="no-color">Astro</a>
 			</div>
 			<div class="copyright">© La Rete 2013&mdash;{currentYear}</div>
 		</footer>
