--- a/src/src/layouts/Layout.scss
+++ b/src/src/layouts/Layout.scss
@@ -123,8 +123,12 @@ h6 {
 /* Other global styles */
 
 a {
-	color: inherit;
 	text-decoration: none;
+	color: var(--color-primary);
+
+	&.no-color {
+		color: inherit;
+	}
 }
 
 .btn {
@@ -167,7 +171,6 @@ a {
 		padding: 0;
 		
 		&:hover {
-			text-decoration: underline;
 			background-color: transparent;
 		}
 	}
