--- a/src/src/pages/index.astro
+++ b/src/src/pages/index.astro
@@ -56,7 +56,7 @@ import withBase from '../utils/withBase';
 
 	<section id="join-us">
 		<p>Vuoi contribuire? Scopri le nostre proposte, partecipa agli incontri, unisciti alla Rete.</p>
-		<a href="#contact" class="btn btn-primary">Contattaci</a>
+		<a href={withBase('/contattaci')} class="btn btn-primary">Contattaci</a>
 	</section>
 
 	<section id="ricordo-marco-reis">
@@ -190,6 +190,7 @@ import withBase from '../utils/withBase';
 		border: 1px solid var(--color-primary);
 		background-color: var(--color-grey-lighter);
 		border-width: 2px 0;
+		font-family: var(--font-cursive);
 
 		p {
 			font-size: 1.25rem;
