--- a/src/src/layouts/Layout.astro
+++ b/src/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const includeGoatCounter = import.meta.env.INCLUDE_GOATCOUNTER === 'true';
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href={withBase('/favicon.png')} />
 		<meta name="generator" content={Astro.generator} />
 		<title>La Rete - Vercelli</title>
 	</head>
